--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -10,7 +10,7 @@
 {% endblock meta %}
 
 {% block content %}
-
+{% include 'navbarOri.html' %}
 <section id="authentication" class="h-screen w-full xl:px-20 lg:px-10 sm:px-2 px-4">
     <div class="h-full flex flex-col gap-8 items-center justify-center text-white text-center">
         <section id="b01" class="w-full">
