--- a/authentication/templates/registerPanitia.html
+++ b/authentication/templates/registerPanitia.html
@@ -6,6 +6,7 @@
 {% endblock meta %}
 
 {% block content %}
+{% include 'navbarOri.html' %}
 <br><br><br><br><br><br><br><br><br><br><br><br>
 <section id="authentication-login" class="h-screen w-full xl:px-20 lg:px-10 sm:px-2 px-4 py-16 text-white">
     <div class="h-full flex flex-col items-center justify-center">
