--- a/example_app/templates/index.html
+++ b/example_app/templates/index.html
@@ -10,7 +10,7 @@
 {% endblock meta %}
 
 {% block content %}
-
+{% include 'navbarOri.html' %}
 <section id="authentication" class="h-screen w-full xl:px-20 lg:px-10 sm:px-2 px-4">
     <div class="h-full flex flex-col gap-8 items-center justify-center text-white text-center">
         <section id="b01" class="w-full">
@@ -34,11 +34,11 @@
                     </div>
                     <hr class="border-shark-400 col-span-3">
                 </div>
-              {% comment %} <a href="{% url 'authentication:register' %}"> {% endcomment %}
+              <a href="{% url 'authentication:register' %}">
                 <button class="bg-primary-500 w-full py-2 rounded-lg hover:bg-primary-400 transition cursor-pointer">
                     Register
                 </button>
-              {% comment %} </a> {% endcomment %}
+              </a>
             </div>
         </section>
         <section class="h-4" />
