--- a/list_pertandingan/templates/list_pertandingan_manager.html
+++ b/list_pertandingan/templates/list_pertandingan_manager.html
@@ -2,6 +2,18 @@
 {% load static %}
 
 {% block meta %}
+{% if username == 'not found' %}
+{% include 'navbarOri.html' %}
+{% elif member_type == 'penonton' %}
+{% include 'navbarPenonton.html' %}
+{% elif member_type == 'panitia' %}
+{% include 'navbarPanitia.html' %}
+{% elif member_type == 'manajer' %}
+{% include 'navbarManajer.html' %}
+{% endif %}
+{% endblock meta %}
+
+{% block content %}
 <head>
     <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <title> List Pertandingan Tim</title>
@@ -40,9 +52,6 @@
         }
     </style>
 </head>
-{% endblock meta %}
-
-{% block content %}
 <body>
     <h1 class="page-title"> List Pertandingan Tim</h1>
     <table class="list-pertandingan">
@@ -54,16 +63,13 @@
             </tr>
         </thead>
         <tbody>
+            {% for p in pertandingan %}
             <tr>
-                <th>[Nama Tim Bertanding]</th>
-                <th>[Nama Stadium]</th>
-                <th>[Tanggal dan Waktu]</th>
+                <th>{{p.teams}}</th>
+                <th>{{p.nama}}</th>
+                <th>{{p.start_datetime}}</th>
             </tr>
-            <tr>
-                <th>[Nama Tim Bertanding]</th>
-                <th>[Nama Stadium]</th>
-                <th>[Tanggal dan Waktu]</th>
-            </tr>
+            {% endfor %}
         </tbody>
     </table>
 </body>
