--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block meta %}
-<title>Babadu | Login</title>
+<title>U-League | Login</title>
+{% include 'navbarOri.html' %}
 {% endblock meta %}
 
 {% block content %}
@@ -23,25 +24,19 @@
                 </div>
                 <hr class="border-shark-400">
                 {% csrf_token %}
-                <section id="auth-login-input" class="space-y-2">
+                <section id="auth-login=-input" class="space-y-2">
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
                             Username
                         </div>
-                        <div>
-                            <div class = "w-full px-4 py-4 border border-shark-500 bg-transparent outline-none focus:border-primary-400 rounded-md transition text-white">
-                                {{ login_form.nama}}
-                            </div>
-                        </div>
+                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="username" type="text" placeholder="Username">
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
                             Password
                         </div>
                         <div>
-                            <div class = "w-full px-4 py-4 border border-shark-500 bg-transparent outline-none focus:border-primary-400 rounded-md transition text-white"> 
-                                {{ login_form.email }}
-                            </div>
+                            <input class="shadow appearance-none rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" name="password" type="password" placeholder="Password">
                         </div>
                     </div>
                 </section>
@@ -58,6 +53,14 @@
                         </div>
                         <hr class="border-shark-400 col-span-4">
                     </div>
+                    <div class="mt-3">
+                        {% if messages %}
+                    <ul>
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                    </ul>
+                    {% endif %} 
                     <h1 class="text-black text-base text-center">Haven't signed up yet?
                         <a class="text-primary-500 hover:underline transition" href="{% url 'authentication:register' %}">
                             Register
@@ -65,6 +68,7 @@
                     </h1>
                 </section>
             </form>
+
 
         </div>
     </div>
