--- a/authentication/templates/registerManajer.html
+++ b/authentication/templates/registerManajer.html
@@ -2,13 +2,13 @@
 {% load static %}
 
 {% block meta %}
-<title>Babadu | Login</title>
+<title>U-League | Register Manajer</title>
+{% include 'navbarOri.html' %}
 {% endblock meta %}
 
 {% block content %}
-{% include 'navbarOri.html' %}
 <br><br><br><br><br><br><br><br><br><br>
-<section id="authentication-login" class="h-screen w-full xl:px-20 lg:px-10 sm:px-2 px-4 py-16 text-white">
+<section id="authentication-register" class="h-screen w-full xl:px-20 lg:px-10 sm:px-2 px-4 py-16 text-white">
     <div class="h-full flex flex-col items-center justify-center">
         <section id="b01" class="w-full">
             <div class="max-w-md mx-auto p-4">
@@ -29,104 +29,85 @@
                         <div class="text-black font-semibold">
                             Username
                         </div>
-                        <div>
-                            <div class = "w-full px-4 py-4 border border-shark-500 bg-transparent outline-none focus:border-primary-400 rounded-md transition text-white">
-                                
-                            </div>
-                        </div>
+                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="username" type="text" placeholder="Username">
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
                             Password
                         </div>
-                        <div>
-                            <div class = "w-full px-4 py-4 border border-shark-500 bg-transparent outline-none focus:border-primary-400 rounded-md transition text-white"> 
-                                
-                            </div>
-                        </div>
+                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" name="password" type="password" placeholder="Password">
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
                             Nama Depan
                         </div>
-                        <div>
-                            <div class = "w-full px-4 py-4 border border-shark-500 bg-transparent outline-none focus:border-primary-400 rounded-md transition text-white">
-                                
-                            </div>
-                        </div>
+                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="nama_depan" type="text" placeholder="Nama Depan">
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
                             Nama Belakang
                         </div>
-                        <div>
-                            <div class = "w-full px-4 py-4 border border-shark-500 bg-transparent outline-none focus:border-primary-400 rounded-md transition text-white">
-                                
-                            </div>
-                        </div>
+                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="nama_belakang" type="text" placeholder="Nama Belakang">
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
                             Nomor HP
                         </div>
-                        <div>
-                            <div class = "w-full px-4 py-4 border border-shark-500 bg-transparent outline-none focus:border-primary-400 rounded-md transition text-white">
-                                
-                            </div>
-                        </div>
+                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="nomor_hp" type="text" placeholder="Nomor HP">
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
                             Email
                         </div>
-                        <div>
-                            <div class = "w-full px-4 py-4 border border-shark-500 bg-transparent outline-none focus:border-primary-400 rounded-md transition text-white">
-                                
-                            </div>
-                        </div>
+                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="email" type="text" placeholder="Email">
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
                             Alamat
                         </div>
-                        <div>
-                            <div class = "w-full px-4 py-4 border border-shark-500 bg-transparent outline-none focus:border-primary-400 rounded-md transition text-white">
-                                
-                            </div>
-                        </div>
+                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="alamat" type="text" placeholder="Alamat">
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
                             Status
                         </div>
-                        <div class="flex items-center">
-                            <input disabled checked id="disabled-radio-2" type="radio" value="" name="disabled-radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                            <label for="disabled-radio-2" class="ml-2 text-sm font-medium text-gray-400 dark:text-gray-500">Mahasiswa</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input disabled checked id="disabled-radio-2" type="radio" value="" name="disabled-radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                            <label for="disabled-radio-2" class="ml-2 text-sm font-medium text-gray-400 dark:text-gray-500">Dosen</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input disabled checked id="disabled-radio-2" type="radio" value="" name="disabled-radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                            <label for="disabled-radio-2" class="ml-2 text-sm font-medium text-gray-400 dark:text-gray-500">Tendik</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input disabled checked id="disabled-radio-2" type="radio" value="" name="disabled-radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                            <label for="disabled-radio-2" class="ml-2 text-sm font-medium text-gray-400 dark:text-gray-500">Alumni</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input disabled checked id="disabled-radio-2" type="radio" value="" name="disabled-radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                            <label for="disabled-radio-2" class="ml-2 text-sm font-medium text-gray-400 dark:text-gray-500">Umum</label>
-                        </div>
-
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="mahasiswa" id="mahasiswa" />
+                            <label class="form-check-label" for="radio2Example1" style='color:black'>
+                              Mahasiswa
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="dosen" id="dosen" />
+                            <label class="form-check-label" for="radio2Example2" style='color:black'>
+                              Dosen
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="tendik" id="tendik" />
+                            <label class="form-check-label" for="radio2Example3" style='color:black'>
+                              Tendik
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="alumni" id="alumni" />
+                            <label class="form-check-label" for="radio2Example4" style='color:black'>
+                              Alumni
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="umum" id="umum" />
+                            <label class="form-check-label" for="radio2Example5" style='color:black'>
+                              Umum
+                            </label>
+                          </div>                
                     </div>
                 </section>
                 <section id="auth-login-submit" class="space-y-1 mt-">
                     <button
                         class="bg-primary-500 w-full py-2 rounded-lg hover:bg-primary-400 transition cursor-pointer text-white font-semibold"
                         type="submit" value="Login">
-                        Login
+                        Register
                     </button>
                     <div class="grid grid-cols-9 items-center text-shark-400">
                         <hr class="border-shark-400 col-span-4">
@@ -135,6 +116,14 @@
                         </div>
                         <hr class="border-shark-400 col-span-4">
                     </div>
+                    <div class="mt-3"; style='color:black'>
+                        {% if messages %}
+                    <ul>
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                    </ul>
+                    {% endif %} 
                     <h1 class="text-black text-base text-center">Already have an account?
                         <a class="text-primary-500 hover:underline transition" href="{% url 'authentication:login' %}">
                             Login
