--- a/dashboard/templates/dashboardPanitia.html
+++ b/dashboard/templates/dashboardPanitia.html
@@ -2,7 +2,16 @@
 {% load static %}
 
 {% block meta %}
-<title>Babadu | Login</title>
+<title> U_League | Dashboard </title>
+{% if username == 'not found' %}
+{% include 'navbarOri.html' %}
+{% elif member_type == 'penonton' %}
+{% include 'navbarPenonton.html' %}
+{% elif member_type == 'panitia' %}
+{% include 'navbarPanitia.html' %}
+{% elif member_type == 'manajer' %}
+{% include 'navbarManajer.html' %}
+{% endif %}
 {% endblock meta %}
 
 {% block content %}
@@ -22,47 +31,46 @@
                     Dashboard Panitia
                 </div>
                 <hr class="border-shark-400">
-                {% csrf_token %}
                 <section id="auth-login-input" class="space-y-2">
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
-                            Nama Depan: {nama_depan}
+                            Nama Depan: {{nama_depan}}
                         </div>
                        
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
-                            Nama Belakang: {nama_belakang}
+                            Nama Belakang: {{nama_belakang}}
                         </div>
                 
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
-                            Nomor HP: {nomor_hp}
+                            Nomor HP: {{nomor_hp}}
                         </div>
                         
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
-                            Email: {email}
+                            Email: {{email}}
                         </div>
                         
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
-                            Alamat: {alamat}
+                            Alamat: {{alamat}}
                         </div>
                         
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
-                            Status: {status}
+                            Status: {{status}}
                         </div>
                         
                     </div>
                     <div class="flex flex-col gap-2">
                         <div class="text-black font-semibold">
-                            Jabatan: {jabatan}
+                            Jabatan: {{jabatan}}
                         </div>
                         
                     </div>
@@ -71,32 +79,24 @@
         <h1 style="font-family:Mulish; font-size:20pt; color:#922B21; text-align:center; font-weight:bold">Daftar Rapat yang akan Datang</h1>
         <br>
         <section id="b01" class="w-full">
+            {% if team == 'Not exist' %}
+            <h1 style="font-family:Mulish; font-size:20pt; color:black; text-align:center">Belum Ada Rapat</h1>
+            {% else %}
+            {% for meeting in rapat %}
             <div class="max-w-md mx-auto p-4 border border-shark-900 rounded-lg">
                 <div class="flex flex-row items-center justify-start gap-4">
                     <div class="text-start text-shark-400">
-                        <h2 class="text-grey font-semibold">~Tanggal Rapat~</h2>
-                        <h4 class="text-grey">=Nama Pertandingan Rapat=</h4>
-                        <h4 class="text-grey">=ID Manajer 1=</h4>
-                        <h4 class="text-grey">=ID Manajer 2=</h4>
-
+                        <h2 class="text-grey font-semibold">Tanggal Pelaksanaan: {{meeting.datetime}}</h2>
+                        <h3 class="text-grey">Manajer Tim A: {{meeting.nama_depan_a}} {{meeting.nama_belakang_a}}</h4>
+                        <h3 class="text-grey">Manajer Tim B: {{meeting.nama_depan_b}} {{meeting.nama_belakang_b}}</h4>
+                        <h4 class="text-grey">Isi Rapat: {{meeting.isi_rapat}}</h4>
                     </div>
                 </div>
             </div>
+            {% endfor %}
+            {% endif %}
         </section>
         <br>
-        <section id="b01" class="w-full">
-            <div class="max-w-md mx-auto p-4 border border-shark-900 rounded-lg">
-                <div class="flex flex-row items-center justify-start gap-4">
-                    <div class="text-start text-shark-400">
-                        <h2 class="text-grey font-semibold">~Tanggal Rapat~</h2>
-                        <h4 class="text-grey">=Nama Pertandingan Rapat=</h4>
-                        <h4 class="text-grey">=ID Manajer 1=</h4>
-                        <h4 class="text-grey">=ID Manajer 2=</h4>
-
-                    </div>
-                </div>
-            </div>
-        </section>
         <br>
     </div>
 </section>
