--- a/manageteam/templates/viewTeam.html
+++ b/manageteam/templates/viewTeam.html
@@ -2,7 +2,16 @@
 {% load static %}
 
 {% block meta %}
-<title>Babadu | Login</title>
+<title>U-League | Tim </title>
+{% if username == 'not found' %}
+{% include 'navbarOri.html' %}
+{% elif member_type == 'penonton' %}
+{% include 'navbarPenonton.html' %}
+{% elif member_type == 'panitia' %}
+{% include 'navbarPanitia.html' %}
+{% elif member_type == 'manajer' %}
+{% include 'navbarManajer.html' %}
+{% endif %}
 {% endblock meta %}
 
 {% block content %}
@@ -53,99 +62,45 @@
         </tr>
     </thead>
     <tbody>
+        {% for pemain in players %}
         <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
             <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                Andi
+                {{pemain.nama_depan}} {{pemain.nama_belakang}}
             </th>
             <td class="px-6 py-4">
-                081111111111
+                {{pemain.nomor_hp}}
             </td>
             <td class="px-6 py-4">
-                01-01-2003
+                {{pemain.tgl_lahir}}
             </td>
             <td class="px-6 py-4">
-                True
+                {{pemain.is_captain}}
             </td>
             <td class="px-6 py-4">
-                Striker
+                {{pemain.posisi}}
             </td>
             <td class="px-6 py-4">
-                21000000
+                {{pemain.npm}}
             </td>
             <td class="px-6 py-4">
-                dummy
+                {{pemain.jenjang}}
             </td>
             <td class="px-6 py-4">
+                {% if pemain.is_captain == 'False' %}
+                <a href="/manageteam/makeCaptainPemain/{{pemain.id_pemain}}/{{nama_tim}}">
                 <button class="bg-primary-500 hover:bg-primary-400 text-white font-bold py-2 px-4 rounded">
                     Make Captain
                   </button>
+                </a>
+                {% endif %}
+                <a href="/manageteam/deletePemain/{{pemain.id_pemain}}">
                   <button class="bg-primary-500 hover:bg-primary-400 text-white font-bold py-2 px-4 rounded">
                     Delete
                   </button>
+                </a>
             </td>
         </tr>
-        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-            <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                Budi
-            </th>
-            <td class="px-6 py-4">
-                082222222222
-            </td>
-            <td class="px-6 py-4">
-                02-02-2003
-            </td>
-            <td class="px-6 py-4">
-                False
-            </td>
-            <td class="px-6 py-4">
-                Midfielder
-            </td>
-            <td class="px-6 py-4">
-                2111111111
-            </td>
-            <td class="px-6 py-4">
-                dummy
-            </td>
-            <td class="px-6 py-4">
-                <button class="bg-primary-500 hover:bg-primary-400 text-white font-bold py-2 px-4 rounded">
-                    Make Captain
-                  </button>
-                  <button class="bg-primary-500 hover:bg-primary-400 text-white font-bold py-2 px-4 rounded">
-                    Delete
-                  </button>
-            </td>
-        </tr>
-        <tr class="bg-white dark:bg-gray-800">
-            <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                Charlie
-            </th>
-            <td class="px-6 py-4">
-                0833333333
-            </td>
-            <td class="px-6 py-4">
-                03-03-2003
-            </td>
-            <td class="px-6 py-4">
-                False
-            </td>
-            <td class="px-6 py-4">
-                Goalkeeper
-            </td>
-            <td class="px-6 py-4">
-                2122222222
-            </td>
-            <td class="px-6 py-4">
-                dummy
-            </td>
-            <td class="px-6 py-4">
-                <button class="bg-primary-500 hover:bg-primary-400 text-white font-bold py-2 px-4 rounded">
-                    Make Captain
-                  </button>
-                  <button class="bg-primary-500 hover:bg-primary-400 text-white font-bold py-2 px-4 rounded">
-                    Delete
-                  </button>
-            </td>
-        </tr>
+        {% endfor %}
     </tbody>
 </table>
 <br><br>
@@ -175,30 +130,33 @@
         </tr>
     </thead>
     <tbody>
+        {% for pelatih in coaches %}
         <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
             <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                Andi 
+                {{pelatih.nama_depan}} {{pelatih.nama_belakang}}
             </th>
             <td class="px-6 py-4">
-                081111111111
+                {{pelatih.nomor_hp}}
             </td>
             <td class="px-6 py-4">
-                01-01-2003
+                {{pelatih.email}}
             </td>
             <td class="px-6 py-4">
-                Depok
+                {{pelatih.alamat}}
             </td>
             <td class="px-6 py-4">
-                Striker
+                {{pelatih.spesialisasi}}
             </td>
         
             <td class="px-6 py-4">
-                
+                <a href="/manageteam/deletePelatih/{{pelatih.id_pelatih}}">
                   <button class="bg-primary-500 hover:bg-primary-400 text-white font-bold py-2 px-4 rounded">
                     Delete
                   </button>
+                </a>
             </td>
         </tr>
+        {% endfor %}
     </tbody>
 </table>
 
@@ -206,11 +164,11 @@
 <h1 style="font-family:Mulish; font-size:20pt; color:bg-primary-500; text-align:center">Tambah</h1>
 <section id="buttons" class="w-1000">
     <div class="max-w-lg mx-auto space-y-2 text-white text-lg font-semibold">
-      {% comment %} <a href="{% url 'authentication:login' %}"> {% endcomment %}
+      <a href="/manageteam/daftarPemain/{{nama_tim}}">
         <button class="bg-primary-500 w-full py-2 rounded-lg hover:bg-primary-400 transition cursor-pointer">
             Pemain
         </button>
-      {% comment %} </a> {% endcomment %}
+      </a>
       <div class="grid grid-cols-7 items-center text-shark-400">
         <hr class="border-shark-400 col-span-3">
         <div class="text-xs col-span-1">
@@ -218,11 +176,11 @@
         </div>
         <hr class="border-shark-400 col-span-3">
     </div>
-      {% comment %} <a href="{% url 'authentication:register' %}"> {% endcomment %}
+      <a href="/manageteam/daftarPelatih/{{nama_tim}}">
         <button class="bg-primary-500 w-full py-2 rounded-lg hover:bg-primary-400 transition cursor-pointer">
             Pelatih
         </button>
-      {% comment %} </a> {% endcomment %}
+      </a>
     </div>
 </section>
 <br><br>
