--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -50,7 +51,7 @@
 </head>
 
 <body class="bg-midnight">
-  
+    
     <section id="body-wrapper" class="max-w-6xl mx-auto">
         {% block content %}
         {% endblock content %}
