--- a/templates/navbarManajer.html
+++ b/templates/navbarManajer.html
@@ -10,24 +10,24 @@
     </div>
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
       <div class="text-sm lg:flex-grow">
-        <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
+        <a href="{% url 'dashboard:show_dashboard' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
                 Dashboard 
           </a>
-          <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
+          <a href="{% url 'manageteam:viewTeam' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
             Mengelola Tim
           </a>
-          <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
+          <a href="{% url 'peminjamanstadium:listPeminjaman' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
             Peminjaman Stadium
           </a>
-          <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
+          <a href="{% url 'list_pertandingan:list_pertandingan_manager' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
             List Pertandingan
           </a>
-          <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
+          <a href="{% url 'rapat:history_rapat' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
             History Rapat
           </a>
       </div>
       <div>
-        <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-primary-200 hover:bg-white mt-4 lg:mt-0">Logout</a>
+        <a href="{% url 'authentication:logout' %}" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-primary-200 hover:bg-white mt-4 lg:mt-0">Logout</a>
       </div>
     </div>
   </nav>
