--- a/templates/navbarPanitia.html
+++ b/templates/navbarPanitia.html
@@ -10,18 +10,18 @@
     </div>
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
       <div class="text-sm lg:flex-grow">
-        <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
+        <a href="{% url 'dashboard:show_dashboard' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
                 Dashboard 
           </a>
-          <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
+          <a href="{% url 'rapat:history_rapat' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
                 Rapat
           </a>
-          <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
+          <a href="{% url 'managepertandingan:listPertandingan' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
             Manage Pertandingan
           </a>
       </div>
       <div>
-        <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-primary-200 hover:bg-white mt-4 lg:mt-0">Logout</a>
+        <a href="{% url 'authentication:logout' %}" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-primary-200 hover:bg-white mt-4 lg:mt-0">Logout</a>
       </div>
     </div>
   </nav>
