--- a/mulai_rapat/templates/rapatPertandingan.html
+++ b/mulai_rapat/templates/rapatPertandingan.html
@@ -68,11 +68,15 @@
             <section id="auth-login-input" class="space-y-2">
                 <div class="flex flex-col gap-2">
                                 
-                    <h2>Rapat Pertandingan [?] vs [?]</h2>
+                    <h2>Rapat Pertandingan</h2>
+                    <h2>{{match_name}}</h2>
                     <hr class="border-shark-400">
                     <label for="isi-rapat">Isi Rapat:</label>
                     <textarea id="isi-rapat" name="isi-rapat" rows="10" cols="30"></textarea>
-                    <input type="submit" value="Submit">
+                    <a href = href="/dashboard/templates/dashboardPanitia.html">
+                      <input type="submit" value="Submit">
+                    </a>
+                    
                 </div>
             <section>   
                     
