finished insert for add rapat pertandingan

--- a/mulai_rapat/templates/pilihPertandingan.html
+++ b/mulai_rapat/templates/pilihPertandingan.html
@@ -99,7 +99,7 @@ a:hover {
                         <td>{{match.nama_stadium}}</td>
                         <td>{{match.start_datetime}}</td>
                         <td>{{match.end_datetime}}</td>
-                        <td><a href="../rapatPertandingan/{{match.id_pertandingan}}" >Mulai Rapat</a></td>
+                        <td><a href="../rapatPertandingan/{{match.id_pertandingan}}/{{match.nama_tim1}}/{{match.nama_tim2}}" >Mulai Rapat</a></td>
                       </tr>
                       {% endfor %} 
                     </tbody>
