--- a/mulai_rapat/templates/rapatPertandingan.html
+++ b/mulai_rapat/templates/rapatPertandingan.html
@@ -51,7 +51,7 @@
 	</style>
 </head>
 <body>
-    <section id="authentication-login" class="h-screen w-full xl:px-20 lg:px-10 sm:px-2 px-4 py-16 text-white">
+    <section id="authentication-login" class="h-screen w-full xl:px-20 lg:px-10 sm:px-2 px-4 py-16 text-black">
         <div class="h-full flex flex-col items-center justify-center">
             <section id="b01" class="w-full">
                 <div class="max-w-md mx-auto p-4">
@@ -61,26 +61,20 @@
         </div>
     </section>
     <div class="w-full md:w-4/6 my-6 mx-auto h-auto p-4 border border-shark-500 rounded-lg">
-        <form method="POST" action="" class="w-full flex flex-col gap-4">
-                   
-                    
-            {% csrf_token %}
-            <section id="auth-login-input" class="space-y-2">
-                <div class="flex flex-col gap-2">
-                                
-                    <h2>Rapat Pertandingan</h2>
-                    <h2>{{match_name}}</h2>
-                    <hr class="border-shark-400">
-                    <label for="isi-rapat">Isi Rapat:</label>
-                    <textarea id="isi-rapat" name="isi-rapat" rows="10" cols="30"></textarea>
-                    <a href = href="/dashboard/templates/dashboardPanitia.html">
-                      <input type="submit" value="Submit">
-                    </a>
-                    
-                </div>
-            <section>   
-                    
-         </form>
+      <form method="POST" action="" class="w-full flex flex-col gap-4">
+        {% csrf_token %}
+        <section id="auth-login-input" class="space-y-2">
+            <div class="flex flex-col gap-2">
+                <h2>Rapat Pertandingan</h2>
+                <h2>{{tim1}} vs {{tim2}}</h2>
+                <hr class="border-shark-400">
+                <label for="isi-rapat">Isi Rapat:</label>
+                <textarea id="isi_rapat" name="isi_rapat" rows="10" cols="30" placeholder="Catat isi rapat di sini"></textarea>
+                <input type="submit" value="Submit">
+            </div>
+        </section>   
+    </form>
+    
      </div>
               
 </body>
