--- a/templates/navbarPanitia.html
+++ b/templates/navbarPanitia.html
@@ -13,7 +13,7 @@
         <a href="{% url 'dashboard:show_dashboard' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
                 Dashboard 
           </a>
-          <a href="{% url 'rapat:history_rapat' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
+          <a href="{% url 'mulai_rapat:pilihPertandingan' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
                 Rapat
           </a>
           <a href="{% url 'managepertandingan:listPertandingan' %}" class="block mt-4 lg:inline-block lg:mt-0 text-primary-200 hover:text-white ml-4 mr-4">
