--- a/manageteam/templates/daftarPemain.html
+++ b/manageteam/templates/daftarPemain.html
@@ -3,7 +3,7 @@
 
 {% block meta %}
 <title>U-League | Daftar Pemain</title>
-{% if username == 'not found' %}
+{% if username == 'Not found' %}
 {% include 'navbarOri.html' %}
 {% elif member_type == 'penonton' %}
 {% include 'navbarPenonton.html' %}
